Changes for 1.2.0:

* Fixed issue #3 - Move library to the root of the repository

Changes for 1.1.1:

* Updated README and INSTALL instructions for more clarity

Changes for 1.1.0:

* Updated documentation

Changes for 1.0.101:

* First public release.
* Code originally release at http://www.end2endzone.com/nonblockingrtttl-a-non-blocking-arduino-library-for-playing-rtttl-melodies/