@@ -1,1 +1,0 @@
-set PRODUCT_VERSION=1.1.2
